# epitech-indiestudio

./: .gitignore  CMakeLists.txt  bomberman  readme.md
.github/workflows/: cmake.yml
Ai/: AI.cpp  AI.hpp  CMakeLists.txt
Application/: main.cpp
AssetSelector/: AssetSelector.cpp  AssetSelector.hpp  CMakeLists.txt
BlockMap/: CMakeLists.txt  blockMap.cpp  blockMap.hpp
Button/: Button.cpp  Button.hpp  CMakeLists.txt
CPack/: indiestudio.desktop  license.txt  win32.rc
Controller/: CMakeLists.txt  IrrlichtController.cpp  IrrlichtController.hpp
EventReceiver/: CMakeLists.txt  MyEventReceiver.cpp  MyEventReceiver.hpp
Exception/: CMakeLists.txt  Error.cpp  Error.hpp
GameObject/: CMakeLists.txt  Collider.cpp  Collider.hpp  GameObject.cpp  GameObject.hpp  IGameObject.hpp
GameScene/: AScene.cpp  AScene.hpp  CMakeLists.txt  GameScene.cpp  GameScene.hpp  GameSceneManager.cpp  IGameScene.hpp  IScene.hpp  SceneManager.cpp  SceneManager.hpp  TestGameScene.cpp  TestGameSceneTest.cpp  TestGameSceneTest.hpp
MapGenerator/: CMakeLists.txt  MapGenerator.cpp  MapGenerator.hpp
Menu/: CMakeLists.txt  ChoosePlayers.cpp  ChoosePlayers.hpp  EndScene.cpp  EndScene.hpp  Introduction.cpp  Introduction.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  SelectSkin.cpp  SelectSkin.hpp  SelectSkins.cpp  SelectSkins.hpp
Music/: CMakeLists.txt  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
Player/: Bomb.cpp  Bomb.hpp  CMakeLists.txt  Particles.cpp  Particles.hpp  Player.cpp  Player.hpp
PowerUp/: CMakeLists.txt  PowerUp.cpp  PowerUp.hpp
Settings/: CMakeLists.txt  PauseSettings.cpp  PauseSettings.hpp  Settings.cpp  Settings.hpp
Storage/: BasePath.cpp  CMakeLists.txt  FileName.cpp  LoadFile.cpp  Storage.cpp  Storage.hpp
assets/: player_1.mtl  player_2.mtl  skate.mtl  wall_1.mtl  wall_2.mtl  wall_pass.mtl
assets/bomb/: bomb.b3d  bomb.mtl
assets/map/: floor.mtl
assets/players/: black.b3d  blue.b3d  green.b3d  white.b3d
cmake/Irrlicht/: IrrlichtConfig.cmake
cross_platform/: CMakeLists.txt
cross_platform/src/: main.cpp
include/: Button.hpp  GameObject.hpp  GameScene.hpp  GameSceneManager.hpp  IGameObject.hpp  IGameScene.hpp  IrrlichtController.hpp  Menu.hpp  Music.hpp  MyEventReceiver.hpp  Player.hpp  Settings.hpp  TestGameScene.hpp
lib/Irrlicht/: .FindIrrlicht.cmake.swp
src/: GameObject.cpp  GameScene.cpp  GameSceneManager.cpp  IrrlichtController.cpp  Menu.cpp  MyEventReceiver.cpp  Player.cpp  Settings.cpp  TestGameScene.cpp  TestGameSceneTest.cpp  main.cpp
src/menu/: Window.cpp  Window.hpp
